--- a/kb/dsp/NCO_DDS.ipynb
+++ b/kb/dsp/NCO_DDS.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/OneAudio/AA2380-MAXV_TSTQ9.1/blob/main/kb/dsp/NCO_DDS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "68b5047f-3c5a-423e-872a-dd09d2b7cff3",
       "metadata": {
         "id": "68b5047f-3c5a-423e-872a-dd09d2b7cff3"
@@ -25,11 +15,11 @@
       "execution_count": 1,
       "id": "connected-architecture",
       "metadata": {
-        "id": "connected-architecture",
-        "outputId": "2a051400-8403-4cf9-c5e3-ae202e9ebc5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "connected-architecture",
+        "outputId": "2a051400-8403-4cf9-c5e3-ae202e9ebc5b"
       },
       "outputs": [
         {
@@ -121,12 +111,12 @@
       "execution_count": 65,
       "id": "amber-syntax",
       "metadata": {
-        "id": "amber-syntax",
-        "outputId": "8f3f8295-8809-4633-ec87-360f5797a2aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "amber-syntax",
+        "outputId": "8f3f8295-8809-4633-ec87-360f5797a2aa"
       },
       "outputs": [
         {
@@ -170,11 +160,11 @@
       "execution_count": 66,
       "id": "parallel-equation",
       "metadata": {
-        "id": "parallel-equation",
-        "outputId": "eba8936b-80de-4f41-9751-3dd3b986f251",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "parallel-equation",
+        "outputId": "eba8936b-80de-4f41-9751-3dd3b986f251"
       },
       "outputs": [
         {
@@ -216,12 +206,12 @@
       "execution_count": 67,
       "id": "informative-japan",
       "metadata": {
-        "id": "informative-japan",
-        "outputId": "b8bffa9a-ff27-40a2-801c-500686a10970",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "informative-japan",
+        "outputId": "b8bffa9a-ff27-40a2-801c-500686a10970"
       },
       "outputs": [
         {
@@ -284,12 +274,12 @@
       "execution_count": 61,
       "id": "introductory-application",
       "metadata": {
-        "id": "introductory-application",
-        "outputId": "03e30f39-ba7c-432e-f91c-86f0dcb67892",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "introductory-application",
+        "outputId": "03e30f39-ba7c-432e-f91c-86f0dcb67892"
       },
       "outputs": [
         {
@@ -323,12 +313,12 @@
       "execution_count": 69,
       "id": "judicial-pension",
       "metadata": {
-        "id": "judicial-pension",
-        "outputId": "bf9e05c8-3f5f-439f-b820-72da25db7061",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "judicial-pension",
+        "outputId": "bf9e05c8-3f5f-439f-b820-72da25db7061"
       },
       "outputs": [
         {
@@ -434,12 +424,12 @@
       "execution_count": 70,
       "id": "460f64bc-6cc5-4319-aa36-c07940d1c8d1",
       "metadata": {
-        "id": "460f64bc-6cc5-4319-aa36-c07940d1c8d1",
-        "outputId": "c220d0d6-b7f9-46ea-886a-8eab859a875e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 922
-        }
+        },
+        "id": "460f64bc-6cc5-4319-aa36-c07940d1c8d1",
+        "outputId": "c220d0d6-b7f9-46ea-886a-8eab859a875e"
       },
       "outputs": [
         {
@@ -522,12 +512,12 @@
       "execution_count": 45,
       "id": "628bd71a-6b93-4650-9d5d-330c202927bc",
       "metadata": {
-        "id": "628bd71a-6b93-4650-9d5d-330c202927bc",
-        "outputId": "05bb5ab4-2a75-47c2-a605-8dde411e92bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 473
-        }
+        },
+        "id": "628bd71a-6b93-4650-9d5d-330c202927bc",
+        "outputId": "05bb5ab4-2a75-47c2-a605-8dde411e92bf"
       },
       "outputs": [
         {
@@ -630,12 +620,12 @@
       "execution_count": 44,
       "id": "de046a1f-3b28-4188-bc2b-b04845a8ca4c",
       "metadata": {
-        "id": "de046a1f-3b28-4188-bc2b-b04845a8ca4c",
-        "outputId": "292ab954-7848-42ec-d7f1-fd2a6f7b0799",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 359
-        }
+        },
+        "id": "de046a1f-3b28-4188-bc2b-b04845a8ca4c",
+        "outputId": "292ab954-7848-42ec-d7f1-fd2a6f7b0799"
       },
       "outputs": [
         {
@@ -714,8 +704,7 @@
       "name": "python"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
